[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/elements/icon_chooser.gd" type="Script" id=1]
[ext_resource path="res://scripts/elements/data_view/collection_view_filler.gd" type="Script" id=2]
[ext_resource path="res://layout/elements/edit_entity_icon/icon_category.tscn" type="PackedScene" id=3]

[node name="icon_chooser" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )
data_node_name = "icon_path"

[node name="panel" type="Panel" parent="."]
margin_right = 720.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="label" type="Label" parent="panel"]
anchor_right = 1.0
anchor_bottom = 0.473
margin_bottom = 0.0267487
align = 1
valign = 2

[node name="label2" type="Label" parent="panel"]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_top = 0.532
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0469971
margin_bottom = 0.75
align = 1

[node name="scroll_container" type="ScrollContainer" parent="."]
show_behind_parent = true
margin_top = 100.0
margin_right = 720.0
margin_bottom = 960.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="v_box_container" type="VBoxContainer" parent="scroll_container"]
margin_right = 720.0
margin_bottom = 78.0
size_flags_horizontal = 3

[node name="collection_view_filler" type="Node" parent="scroll_container/v_box_container"]
script = ExtResource( 2 )
collection_item = ExtResource( 3 )
sorting_key = "#"

[node name="margin_container" type="MarginContainer" parent="scroll_container/v_box_container"]
margin_right = 720.0
margin_bottom = 78.0
mouse_filter = 2

[node name="label" type="Label" parent="scroll_container/v_box_container/margin_container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 58.0
text = "text_game_icons_net"
align = 1
autowrap = true
